# doers

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml
src/: factorial_design.rs  lib.rs  main.rs  py_refrence.py  random_design.rs  response_surface_design.rs
